--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "license": "MIT",
   "peerDependencies": {
     "axios": "^1.3.4"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   }
 }
