--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "target": "es5",
     "baseUrl": "./",
     "types": [],
+    "experimentalDecorators": true,
     "typeRoots": [
       "./node_modules/@types"
     ],
