--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/types/index.d.ts",
+  "bin": "dist/node.js",
   "scripts": {
     "serve": "NODE_ENV=developer rollup -c -w",
-    "build": "NODE_ENV=production rollup -c"
+    "build": "NODE_ENV=production rollup -c",
+    "test": "jest"
   },
   "keywords": [
     "http",
@@ -21,21 +23,28 @@
     "email": "kiwh77@126.com"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "axios": "^1.3.4",
+    "babel-jest": "^29.5.0",
     "eslint": "^6.7.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.5.1",
     "rollup": "^3.20.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-serve": "^2.0.2",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2"
   },
