--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pipe-axios",
+  "name": "wuhao-network",
   "version": "1.0.0",
   "description": "流程齐全、可高度定制的网络请求库，旨在提供网络请求良好体验",
   "main": "dist/index.cjs.js",
