--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
     "test": "jest"
   },
   "keywords": [
-    "http",
-    "network",
     "axios",
+    "wuhao-network",
+    "http",
+    "restful",
+    "network",
     "fetch",
     "xhr"
   ],
   "author": {
     "name": "wuhao",
     "email": "kiwh77@126.com"
+  },
+  "homepage": "https://github.com/kiwh77/wuhao-network",
+  "repository": {
+    "url": "https://github.com/kiwh77/wuhao-network.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
